# M3-Miniprojekt-Integration-Distribution-Parprojekt-

./: Dockerfile  README.md  app.py  dockerfile  export_onnx.py  main.py  model.onnx  model.onnx.data  model_weights.pth  pyproject.toml  requirements.txt  send_real_image.py  test_onnx.py
src/: model.py
